# C180-Project

./: .gitignore  CLAUDE.md  PLAN.md  README.md
android/: AGENT_ENV.md  README.md  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
docs/: NEXT_PHASE_HANDOVER.md  PHASE4_HANDOVER.md  ble_protocol.md  w203_reference.md  wifi_sync_protocol.md
docs/superpowers/plans/: 2026-07-09-phase0-scaffold.md  2026-07-09-phase1-firmware-core.md  2026-07-10-phase4-android-ble.md  2026-07-16-kwp-audit-fixes.md  (+4 more)
firmware/: platformio.ini
firmware/src/: README.md  ble_svc.cpp  ble_svc.h  capture_event.h  capture_pipeline.cpp  capture_pipeline.h  capture_queue.h  crc32.cpp  crc32.h  demo_feed.cpp  demo_feed.h  dtc_list.cpp  dtc_list.h  esp32_uart_transport.cpp  esp32_uart_transport.h  freertos_capture_queue.h  kline_frame.cpp  kline_frame.h  kline_kwp.cpp  kline_kwp.h  kline_transport.h  latest_values.cpp  latest_values.h  littlefs_ride_file_store.cpp  littlefs_ride_file_store.h  littlefs_storage.cpp  littlefs_storage.h  main.cpp  pid_scheduler.cpp  pid_scheduler.h  pid_schema.cpp  pid_schema.h  pid_wire_format.cpp  pid_wire_format.h  ride_crc.cpp  ride_crc.h  ride_file_store.h  ride_logger.cpp  ride_logger.h  ride_naming.cpp  (+13 more)
firmware/test/: fake_ride_file_store.h  fake_storage.h  fake_transport.h
firmware/tools/: README.md  kl_sync_dev_server.py  kline_sim.py
hardware/: BOM.md  build_guide.md  wiring.md
pipeline/: pyproject.toml
pipeline/src/kl/: cli.py  schema.py
pipeline/tests/: test_cli.py  test_schema.py
(+155 files in other folders)
