[project]
name = "kompressorlink-pipeline"
version = "0.1.0"
description = "PC analytics pipeline for KompressorLink (W203 C180 Kompressor OBD logger)"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
]

[project.scripts]
kl = "kl.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kl"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
